remade structure of parent file class