@@ -5,16 +5,14 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class ImageFile extends GeneralFile{
     int width;
     int height;
 
     public ImageFile(String imagePath) {
-        super(Path.of(imagePath));
-        Path path = Path.of(imagePath);
-        if (!Files.exists(Paths.get(imagePath))) {
+        super(imagePath);
+        if (!Files.exists(Path.of(imagePath))) {
             System.out.println("No such path");
             return;
         }
